--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>1.7</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.9.3</version>
+        </dependency>
     </dependencies>
 
 </project>
